<resources>
    <string name="app_name">BeagleSight</string>
    <string name="action_import">Import</string>
    <string name="title_activity_sight_list">Sight List</string>
    <string name="title_activity_show_sight">Show Sight</string>
    <string name="distance">Distance:</string>
    <string name="pin_setting">Pin Setting:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="title_activity_add_sight">Add Sight</string>
    <string name="title_activity_add_distance">Add Distance</string>
    <string name="calc_description">To use the calculator, take two shots at the target, and note this pin setting and the distance from the middle. The app will then calculate the correct pin setting.</string>
    <string name="calculator">Calculator</string>
    <string name="pin_setting_1">Pin Setting 1</string>
    <string name="pin_setting_2">Pin Setting 2</string>
    <string name="offset_1">Offset 1</string>
    <string name="offset_2">Offset 2</string>
    <string name="add">Add</string>
    <string name="failed_find_bow_settings">Failed to find bow settings</string>
    <string name="delete_position">Delete Position</string>
    <string name="target">Target:</string>
    <string name="see_configured_bows">Configured Bows</string>
    <string name="see_nearby_targets">Target Map</string>
    <string name="waiting_for_location">Waiting for location…</string>
    <string name="title_activity_target_map">Target Map</string>
    <string name="shooting_locations">Shooting Locations:</string>
    <string name="add_location">Add Shoot Location</string>
    <string name="title_activity_edit_target">Create/Edit Target</string>
    <string name="title_activity_edit_location">Add/Edit Location</string>
    <string name="lock_location">Lock Location</string>
    <string name="value">Value</string>
    <string name="accuracy">Accuracy</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="acquire_location">Acquire Location</string>
    <string name="plus_minus">± %s</string>
    <string name="latlong">LatLong:</string>
    <string name="action_update">Update Public Targets</string>
    <string name="action_export">Export</string>
    <string name="download_message">Downloading public targets…</string>
    <string name="targets_url">https://raw.githubusercontent.com/cameroncros/BeagleSight/master/default_configs/targets.xml</string>
    <string name="title_activity_target_ar">TargetAR</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_bow_selected">No Bow Selected</string>
</resources>
